simple/test/features/errors/semantic/e1028_unknown_assoc_type_name.spl
# E1028: Unknown Associated Type Name

Feature: E1028 - Unknown Associated Type
  As a Simple compiler
  I want to detect references to unknown associated types
  So that associated type usage is valid

  Background:
    Given I have the Simple compiler
    And the compiler supports associated types

  Scenario: Referencing non-existent associated type
    When I compile:
      '''
      trait Iterator:
        type Item

      fn process<I: Iterator>(iter: I):
        val x: I::Value = iter.next()  # Error: Value doesn't exist
      '''
    Then I should see error E1028 at line 5
    And the error message should be "unknown associated type `{name}`"
    And the label should indicate "associated type not found"
    And the help should suggest "check if the associated type is defined in the trait"

  Scenario: Typo in associated type reference
    When I compile:
      '''
      trait Container:
        type Element

      fn get_first<C: Container>(c: C) -> C::Elem:  # Error: Elem vs Element
        # implementation
      '''
    Then I should see error E1028

  Scenario: Valid associated type reference
    When I compile:
      '''
      trait Iterator:
        type Item

      fn first<I: Iterator>(iter: I) -> Option<I::Item>:
        iter.next()
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      trait Iterator:
        type Item

      fn test<I: Iterator>(i: I) -> I::Unknown:
        # body
      '''
    Then I should see error E1028
    And the error message should contain "알 수 없는 연관 타입"
